--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 <body>
     <h1>こんにちは</h1>
+    <button class="bottun-1">ボタン1</button>
+    <input form="submit">submit</input>
 </body>
 
 </html>
