--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <h1>こんにちは</h1>
     <button class="bottun-1">ボタン1</button>
-    <input form="submit">submit</input>
+    <input type="submit">submit</input>
 </body>
 
 </html>
