--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <h1>こんにちは</h1>
 
-    <button class="bottun-1">ボタン1</button>
+    <button class="bottun-1" onclick='gtag("event", "click_button", { link_text: "お申し込みはこちら", link_url: "https://hogehoge.jp/"})'>ボタン1</button>
     <form id="sampleForm">
         <input type="text" name="username" placeholder="ユーザー名">
         <input type="submit" value="送信">
