--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-12345ABCDE', { 'debug_mode':true });
+    gtag('config', 'G-GP1PDRLYYN', { 'debug_mode':true });
     </script>
 </head>
 
