--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <h1>こんにちは</h1>
 
     <button class="bottun-1" onclick='gtag("event", "click_button", { link_text: "お申し込みはこちら", link_url: "https://hogehoge.jp/"})'>ボタン1</button>
+    <button class="bottun-1">ボタン2</button>
     <form id="sampleForm">
         <input type="text" name="username" placeholder="ユーザー名">
         <input type="submit" value="送信">
