--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     })(window,document,'script','dataLayer','GTM-5GQXKLGD');</script>
     <!-- End Google Tag Manager -->
 
-    <!-- Google tag (gtag.js)
+    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GP1PDRLYYN"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-GP1PDRLYYN', { 'debug_mode':true }); -->
-    <!-- </script> -->
+    gtag('config', 'G-GP1PDRLYYN', { 'debug_mode':true }); 
+    </script>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <h1>こんにちは</h1>
 
-    <button class="button-1">ボタン1</button>
+    <button class="button-1" onclick='gtag("event", "click_button", { link_text: "お申し込みはこちら", link_url: "https://hogehoge.jp/"})'>ボタン1</button>
     <button class="button-1">ボタン2</button>
     <form id="sampleForm">
         <input type="text" name="username" placeholder="ユーザー名">
